feat: Add Settings screen, refine Pocket UX, and implement bottom navigation (#3)
This commit introduces several UI and UX improvements:

1.  **Settings Screen:**
    *   Implemented a basic Settings screen (`settings_screen.dart`) with sections for Appearance (info only), Pocket Integration (status, logout), and iCloud Sync (info only).
    *   Added English localizations for the Settings screen.

2.  **Pocket Import User Experience:**
    *   Added `pocketIsImportingProvider` to track Pocket import state.
    *   A global `LinearProgressIndicator` is now displayed in `MainNavigationScreen` during Pocket article import.
    *   Improved SnackBar messages for various stages of Pocket authentication and import (English localizations updated).

3.  **Bottom Bar Navigation:**
    *   Created `MainNavigationScreen.dart` which uses a `PageView` to manage navigation between `HomeScreen` and `SettingsScreen`.
    *   `CustomBottomNavigation` now controls this `PageView`.
    *   The global Pocket import progress indicator was moved to `MainNavigationScreen` to be visible across relevant screens.

4.  **Testing:**
    *   Added widget tests for the new `SettingsScreen` to verify UI elements and basic interactions (e.g., Pocket logout).
    *   I advise you to perform manual testing for the Pocket import flow and bottom navigation.

5.  **Documentation:**
    *   Updated `README.md` to include the new Settings screen, describe the refined Pocket import UX, detail new setup requirements (Pocket API key, uni_links, iCloud native part, build_runner), and reflect the current status of features.

I have provided you with consolidated Chinese translations for manual update of `app_zh.arb`. Native implementation for iCloud sync remains a task for you.

Co-authored-by: google-labs-jules[bot] <161369871+google-labs-jules[bot]@users.noreply.github.com>

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -99,5 +99,28 @@
                 "example": "Settings"
             }
         }
-    }
+    },
+    "settingsAppearanceTitle": "Appearance",
+    "settingsAppearanceCurrentSystem": "Currently following system theme.",
+    "settingsPocketTitle": "Pocket Integration",
+    "settingsPocketStatusAuthenticated": "Authenticated with Pocket",
+    "settingsPocketLogoutButton": "Logout",
+    "settingsPocketStatusNotAuthenticated": "Not connected to Pocket",
+    "settingsPocketLoginPrompt": "Please use the 'Connect to Pocket' option in the app bar on the main screen.",
+    "settingsPocketStatusError": "Error checking Pocket status.",
+    "settingsICloudSyncTitle": "iCloud Sync (iOS/macOS)",
+    "settingsICloudSyncStatusPlaceholder": "Sync status will be shown here.",
+    "pocketImportInProgress": "Pocket import in progress...",
+    "pocketImportSuccessNoArticles": "Pocket sync successful. No new articles found.",
+    "pocketImportSuccessArticles": "Pocket sync successful. Imported {count} new articles.",
+    "@pocketImportSuccessArticles": {
+        "description": "Success message when Pocket articles are imported",
+        "placeholders": {
+            "count": {
+                "type": "int",
+                "example": "5"
+            }
+        }
+    },
+    "pocketAuthSuccessImportStarting": "Pocket authentication successful! Starting article import..."
 }
